TAG: littriageload-6-0-18-6
TAG: littriageload-6-0-18-5
TAG: littriageload-6-0-18-4
TAG: littriageload-6-0-18-3
TAG: littriageload-6-0-18-2
TAG: littriageload-6-0-18-1
DATE: 02/09/2022
STAFF: lec
wts2-599/PNAS journal no longer has page numbers in PubMed/PG tag
added elocator logic
#	modified:   bin/littriageload.py
#	new file:   bin/processElocator.sh
updated LOG
#	modified:   bin/processPubMedReview.sh

TAG: littriageload-6-0-17-22
DATE: 01/05/2022
STAFF: lec
wts2-450/LTLO: Reviews are underlabeled in the database (TR13043)
#       littriageload.config.default
#       bin/processPubMedReview.py
#       bin/processPubMedReview.sh

TAG: littriageload-6-0-17-21
TAG: littriageload-6-0-17-20
DATE: 12/28/2021
STAFF: sc
YAKS-439 - Update Relevance Classifier wrapper script in littriageload
a) updateRelevance.py - don't execute sql file if empty
b) processRelevance.sh - use DLAJOBSTREAMFUNCTIONS checkStatus for each call to
   exit gracefully on failure

TAG: littriageload-6-0-17-19
TAG: littriageload-6-0-17-18
DATE: 12/28/2021
STAFF: lec
wts2-753/littriageload exception on reference w/ null title

TAG: littriageload-6-0-17-17
TAG: littriageload-6-0-17-16
TAG: littriageload-6-0-17-15
TAG: littriageload-6-0-17-14
DATE: 11/30/2021
STAFF: lec
wts2-687/archiving files for PRO auto-triagesh fix
#       processSecondary.sh
#       secondary.py
#       PRO_extracted_text.sql
#       PRO_ignored_text.sql
#       secondaryReports.csh

TAG: littriageload-6-0-17-13
DATE: 09/22/2021
STAFF: lec
wts2-702/littriageload: littriage_NLML_refresh fix

TAG: littriageload-6-0-17-12
DATE: 09/14/2021
STAFF: lec
wts2-685/Secondary triage script for auto-Routing for Tumor needs adjusting

TAG: littriageload-6-0-17-11
DATE: 07/26/2021
STAFF: lec
littriageload.py/do not attach to diagFile; abstract may contain 'fail' which gets reported by Dave's checker

TAG: littriageload-6-0-17-10
DATE: 06/10/2021
STAFF: lec
wts2-649/littriageload/littriage_noctua/littriage_goa/J:# & Relevance
